# dashcam-gps

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Jenkinsfile  LICENSE  README.md  conanfile.txt  fuzzing.md
.github/ISSUE_TEMPLATE/: bug_report.md
apps/: .gitignore  CMakeLists.txt
apps/android-player/: CMakeLists.txt  entrypoints.cc
apps/html+svg/: CMakeLists.txt  debug.cc  debug.hh  debug_fmt_unittests.cc  main.cc  svg.cc  svg.hh  svg_media_unittests.cc  svg_unittests.cc  svg_unittests.hh
apps/listing/: CMakeLists.txt  debug.cc  debug.hh  listing.cc  listing.hh  main.cc
apps/qt5-mgps-player/: CMakeLists.txt  main.cc  qml.qrc
apps/qt5-mgps-player/declarative/: QmlAppWindow.hh  QmlDrive.cc  QmlDrive.hh  declarative.cc  declarative.hh
apps/qt5-mgps-player/qml/: ProgressControl.qml  TimelineDebug.qml  VideoPlayer.qml  main.qml
apps/qt5-player/: CMakeLists.txt  dashcam-gps-player.desktop  main.cc  qml.qrc  qt5-player.rc
apps/qt5-player/declarative/: QmlLibrary.cc  QmlLibrary.hh  QmlObject.cc  QmlObject.hh  QmlTrip.cc  QmlTrip.hh  declarative.cc
apps/qt5-player/qml/: RouteViewer.qml  Speedometer.qml  Viewer.qml  main.qml
apps/qt5-player/qml/viewer/: ProgressControl.qml  RouteViewer.qml  Speedometer.qml  TimelineDebug.qml  VideoPlayer.qml
cmake/: application.cmake  dir_filters.cmake  mgps-plugin.cmake  packing.cmake  semver_meta.cmake  warnings.cmake
examples/: CMakeLists.txt
examples/html+svg/: CMakeLists.txt  debug.cc  debug.hh  main.cc  svg.cc  svg.hh
extras/: CMakeLists.txt
extras/android/: .gitignore  CMakeLists.txt  build.gradle  log.hh
extras/android/class/com/midnightbits/dashcam_gps_player/: PACKAGE.hh  R.cc  R.hh
extras/android/class/com/midnightbits/dashcam_gps_player/data/: Library.cc  Library.hh  PACKAGE.hh
extras/android/class/java/time/: Duration.hh  PACKAGE.hh
extras/android/class/java/util/: ArrayList.hh  List.hh
extras/android/cpp/: CMakeLists.txt  log.hh
extras/android/cpp/class/com/midnightbits/mgps/: Library.cc  Library.hh
extras/android/cpp/class/java/util/: ArrayList.hh  Date.hh  List.hh
extras/android/cpp/filesystem-polyfill/: CMakeLists.txt
extras/android/cpp/jni/: env.cc  env.hh  field.cc  field.hh  fixed_string.hh  method.cc  method.hh  type_base.cc  type_base.hh
extras/android/gradle/: build.gradle
extras/android/gradle/src/main/: AndroidManifest.xml
extras/android/gradle/src/main/cpp/: CMakeLists.txt  entrypoints.cc
extras/android/gradle/src/main/java/com/midnightbits/mgps/: Library.kt  Utils.kt
extras/android/gradle/src/main/res/values/: strings.xml
extras/android/jni/: binding_ref.cc  class.cc  class.hh  env.cc  env.hh  field.cc  field.hh  method.cc  method.hh  object.cc  object.hh  primitive.hh  ref.cc  ref.hh  refs.cc  refs.hh  type_base.hh  type_info.cc  type_info.hh
extras/android/src/main/cpp/: CMakeLists.txt
extras/android/src/main/cpp/class/com/midnightbits/mgps/: Library.cc  PACKAGE.hh
extras/android/src/main/cpp/class/java/util/: PACKAGE.hh
extras/android/src/main/cpp/jni/: binding_ref.hh  ref.hh
extras/mgps-70mai/: 70mai.cc  70mai.hh  70mai_api_unittests.cc  70mai_api_unittests.hh.in  70mai_filename_info_unittests.cc  CMakeLists.txt  api.cc  api.hh  exports.cc
extras/mgps-70mai/fuzzer/: boxes.cc
extras/mgps-70mai/fuzzer/data/: xxd.h  xxd_fs_data_unittests.cc  xxd_fs_data_unittests.hh
extras/mgps-70mai/include/mgps-70mai/: 70mai.hh  loader.hh  plugin.hh
extras/mgps-70mai/src/: 70mai.cc  exports.cc  loader.cc  plugin.cc
src/: CMakeLists.txt  version.in.hh
src/common/: CMakeLists.txt  version.in.hh
src/common/mgps/: clip.hh  clocks.hh  platform_export.hh
src/common/mgps/track/: boundary.hh  coordinate.hh  point.hh  polyline.hh  speed.hh  trace.hh
src/common/mgps/video/: media_clip.hh  playlist.hh
src/fs-polyfill/: CMakeLists.txt
src/mgps/: CMakeLists.txt  api.hh  clocks.cc  clocks.hh  cstdio.cc  drive.cc  drive.hh  export.hh  isom.cc  isom.hh  library.cc  library.hh  media_file.cc  media_file.hh  trip.cc  trip.hh  version.cc
src/mgps/include/mgps/: cstdio.hh  isom.hh  library.hh
src/mgps/loader/: dynamic_plugin.cc  dynamic_plugin.hh  host.cc  host.hh  loader.hh  loader.posix.cc  loader.win32.cc  pecoff_parser.cc  pecoff_parser.hh  plugin_info.cc  plugin_info.hh  plugin_interface.cc  plugin_interface.hh
src/mgps/loader/parser/: elf_parser.cc  elf_parser.hh  file_ptr.hh  mach_parser.cc  mach_parser.hh  pecoff_parser.cc
src/mgps/plugins/: client.hh  plugin_interface.cc  plugin_interface.hh
src/mgps/plugins/host/: dynamic_plugin.cc  dynamic_plugin.hh  host.cc  host.hh  loader.hh  loader.posix.cc  loader.win32.cc
src/mgps/track/: boundary.hh  coordinate.cc  point.cc  point.hh  polyline.cc  polyline.hh  speed.cc  speed.hh  trace.cc  trace.hh
src/mgps/video/: file.cc  file.hh  gap.cc  gap.hh  media_clip.cc  playlist.cc  playlist.hh
src/plugin/: CMakeLists.txt
src/plugin/mgps/plugin/: cstdio.cc  cstdio.hh  isom.cc  isom.hh  plugin.hh
src/qt5-mgps-player/: CMakeLists.txt  appwindow.cc  appwindow.hh  main.cc  main.qml  mgps-player.rc  qml.qrc  qml_trip.cc  qml_trip.hh
src/qt5-mgps-player/declarative/: QmlAppWindow.cc  QmlTrip.cc  QmlTrip.hh  declarative.cc
src/qt5-mgps-player/qml/: MoviePlayer.qml  RouteViewer.qml  VideoPlayer.qml  main.qml
tools/: pack.py
